fixed bug with scrollbars on the review-form & changed README

--- a/frontend/src/app/form-review/form-review.component.css
+++ b/frontend/src/app/form-review/form-review.component.css
@@ -143,6 +143,10 @@ nav.fill ul li a:hover:after,
   display: inline-block;
 }
 
+.mat-drawer-content {
+  overflow: hidden !important;
+}
+
 /* Hamburger Menu & Sidebar Menu Navigation*/
 button.hidden {
   display: none;
